manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: todo-list-app
  name: todo-list-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-list-app
  template:
    metadata:
      labels:
        app: todo-list-app
    spec:
      containers:
      - image: j0n1bek/todo-list-app
        name: todo-list-app
